@@ -1,5 +1,8 @@
 2011-05-06  Philippe Brochard  <pbrochard@common-lisp.net>
 
+	* src/clfswm-internal.lisp (fixe-real-size): Takes care of border
+	size.
+
 	* src/clfswm-layout.lisp (update-layout-managed-children): Fix a
 	bug by using the parent frame instead of the current child.
 
